--- a/index.html
+++ b/index.html
@@ -3,25 +3,504 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Catálogo de Productos</title>
+    <title>Tu Tienda Elegante</title>
     <style>
-        body { font-family: sans-serif; margin: 2em; }
-        .producto { border: 1px solid #ccc; padding: 1em; margin-bottom: 1em; }
-        .producto h2 { margin-top: 0; }
-        .producto img { max-width: 100%; height: auto; }
+        /* Variables de colores neutros */
+        :root {
+            --color-primary: #000;
+            --color-secondary: #fff;
+            --color-text-dark: #333;
+            --color-text-light: #f4f4f4;
+            --color-border: #eee;
+            --color-accent: #666; /* Para detalles sutiles */
+        }
+
+        /* Reset básico y tipografía */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: var(--color-text-dark);
+            background: var(--color-secondary);
+        }
+
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* Header */
+        .main-header {
+            background: var(--color-primary);
+            color: var(--color-text-light);
+            padding: 1rem 0;
+            border-bottom: 1px solid var(--color-accent);
+        }
+
+        .main-header .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        .logo {
+            margin: 0;
+            font-size: 1.8rem;
+            font-weight: bold;
+        }
+
+        /* Navegación */
+        .main-nav ul {
+            list-style: none;
+            display: flex;
+            margin: 0 1rem;
+        }
+
+        .main-nav ul li a {
+            color: var(--color-text-light);
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            display: block;
+            transition: background-color 0.3s ease;
+        }
+
+        .main-nav ul li a:hover,
+        .main-nav ul li a.active {
+            background-color: var(--color-accent);
+            border-radius: 4px;
+        }
+
+        /* Barra de búsqueda */
+        .search-bar {
+            display: flex;
+            gap: 0.5rem;
+            margin-top: 0;
+        }
+
+        .search-bar input[type="text"] {
+            padding: 0.5rem;
+            border: 1px solid var(--color-accent);
+            border-radius: 4px;
+            background: var(--color-secondary);
+            color: var(--color-text-dark);
+            font-size: 1rem;
+        }
+
+        .search-bar button {
+            padding: 0.5rem 1rem;
+            background: var(--color-accent);
+            color: var(--color-text-light);
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .search-bar button:hover {
+            background-color: #555;
+        }
+
+        /* Carrusel de Héroe */
+        .hero-carousel {
+            position: relative;
+            width: 100%;
+            height: 400px;
+            overflow: hidden;
+            margin-bottom: 2rem;
+            background: #f0f0f0;
+        }
+
+        .carousel-inner {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .carousel-item {
+            min-width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        .carousel-caption {
+            position: relative;
+            z-index: 2;
+            color: var(--color-text-light);
+            background: rgba(0, 0, 0, 0.5);
+            padding: 1.5rem 2rem;
+            border-radius: 8px;
+            max-width: 80%;
+        }
+
+        .carousel-caption h2 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .carousel-caption p {
+            font-size: 1.2rem;
+        }
+
+        .carousel-control {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.6);
+            color: var(--color-text-light);
+            border: none;
+            padding: 1rem;
+            cursor: pointer;
+            font-size: 2rem;
+            z-index: 10;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.3s ease;
+        }
+
+        .carousel-control:hover {
+            background: rgba(0, 0, 0, 0.8);
+        }
+
+        .carousel-control.prev {
+            left: 1rem;
+        }
+
+        .carousel-control.next {
+            right: 1rem;
+        }
+
+        /* Cuadrícula de Productos */
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+            padding: 2rem 0;
+        }
+
+        .product-card {
+            background: var(--color-secondary);
+            border: 1px solid var(--color-border);
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .product-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .product-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            display: block;
+            border-bottom: 1px solid var(--color-border);
+        }
+
+        .product-info {
+            padding: 1rem;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .product-info h3 {
+            font-size: 1.3rem;
+            margin-bottom: 0.5rem;
+            color: var(--color-text-dark);
+        }
+
+        .product-info p.description {
+            font-size: 0.9rem;
+            color: var(--color-accent);
+            margin-bottom: 1rem;
+        }
+
+        .product-info p.price {
+            font-size: 1.4rem;
+            font-weight: bold;
+            color: var(--color-primary);
+            margin-top: auto;
+        }
+
+        /* Footer */
+        .main-footer {
+            background: var(--color-primary);
+            color: var(--color-text-light);
+            text-align: center;
+            padding: 1.5rem 0;
+            margin-top: 3rem;
+            border-top: 1px solid var(--color-accent);
+        }
+
+        /* Media Queries para Responsividad */
+        @media (max-width: 768px) {
+            .main-header .container {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .main-nav ul {
+                margin-top: 1rem;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .main-nav ul li a {
+                padding: 0.5rem 0.8rem;
+            }
+
+            .search-bar {
+                margin-top: 1rem;
+                width: 100%;
+                justify-content: center;
+            }
+
+            .search-bar input {
+                width: 60%;
+            }
+
+            .carousel-caption h2 {
+                font-size: 1.8rem;
+            }
+
+            .carousel-caption p {
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            .hero-carousel {
+                height: 250px;
+            }
+
+            .carousel-caption {
+                padding: 1rem;
+            }
+
+            .carousel-caption h2 {
+                font-size: 1.5rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.9rem;
+            }
+
+            .carousel-control {
+                padding: 0.7rem;
+                font-size: 1.5rem;
+                width: 40px;
+                height: 40px;
+            }
+
+            .product-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Catálogo de Productos</h1>
-    <div class="producto">
-        <h2>Producto 1</h2>
-        <p>Descripción detallada del primer producto. Aquí puedes hablar de sus características, materiales, etc.</p>
-        <p><strong>Precio:</strong> $100</p>
-    </div>
-    <div class="producto">
-        <h2>Producto 2</h2>
-        <p>Descripción detallada del segundo producto. Puedes agregar fotos o más texto.</p>
-        <p><strong>Precio:</strong> $250</p>
-    </div>
+    <header class="main-header">
+        <div class="container">
+            <h1 class="logo">Tu Tienda</h1>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#" data-category="all">Inicio</a></li>
+                    <li><a href="#" data-category="ropa">Ropa</a></li>
+                    <li><a href="#" data-category="perfumes">Perfumes</a></li>
+                </ul>
+            </nav>
+            <div class="search-bar">
+                <input type="text" id="searchInput" placeholder="Buscar productos...">
+                <button id="searchButton">Buscar</button>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero-carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/hero1.jpg" alt="Oferta 1">
+                    <div class="carousel-caption">
+                        <h2>Nuevas Colecciones</h2>
+                        <p>Descubre lo último en moda y fragancias.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/hero2.jpg" alt="Oferta 2">
+                    <div class="carousel-caption">
+                        <h2>Envío Gratis</h2>
+                        <p>En pedidos superiores a $500.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/hero3.jpg" alt="Oferta 3">
+                    <div class="carousel-caption">
+                        <h2>Perfumes Exclusivos</h2>
+                        <p>Aromas que te distinguen.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control prev" aria-label="Anterior">&#10094;</button>
+            <button class="carousel-control next" aria-label="Siguiente">&#10095;</button>
+        </section>
+
+        <section id="product-list" class="product-grid container"></section>
+    </main>
+
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // --- Carrusel de imágenes ---
+            const carouselInner = document.querySelector('.carousel-inner');
+            const carouselItems = document.querySelectorAll('.carousel-item');
+            const prevButton = document.querySelector('.carousel-control.prev');
+            const nextButton = document.querySelector('.carousel-control.next');
+            let currentIndex = 0;
+            const totalItems = carouselItems.length;
+            const intervalTime = 5000;
+
+            function updateCarousel() {
+                const itemWidth = carouselItems[0].clientWidth;
+                carouselInner.style.transform = `translateX(${-currentIndex * itemWidth}px)`;
+            }
+
+            function showNext() {
+                currentIndex = (currentIndex + 1) % totalItems;
+                updateCarousel();
+            }
+
+            function showPrev() {
+                currentIndex = (currentIndex - 1 + totalItems) % totalItems;
+                updateCarousel();
+            }
+
+            nextButton.addEventListener('click', showNext);
+            prevButton.addEventListener('click', showPrev);
+
+            let carouselInterval = setInterval(showNext, intervalTime);
+
+            carouselInner.addEventListener('mouseenter', () => clearInterval(carouselInterval));
+            carouselInner.addEventListener('mouseleave', () => carouselInterval = setInterval(showNext, intervalTime));
+
+            window.addEventListener('resize', updateCarousel);
+            updateCarousel(); // Llamar al inicio para posicionar correctamente
+
+            // --- Carga de Productos y Funcionalidad de Búsqueda/Filtro ---
+            const productListSection = document.getElementById('product-list');
+            const searchInput = document.getElementById('searchInput');
+            const searchButton = document.getElementById('searchButton');
+            const navLinks = document.querySelectorAll('.main-nav ul li a');
+
+            const products = [
+                { id: 1, name: "Camisa de Lino", description: "Fresca y elegante para el verano.", price: "€45.00", image: "images/ropa1.jpg", category: "ropa", keywords: "camisa lino elegante verano" },
+                { id: 2, name: "Pantalón Chino", description: "Comodidad y estilo para el día a día.", price: "€60.00", image: "images/ropa2.jpg", category: "ropa", keywords: "pantalon chino casual comodo" },
+                { id: 3, name: "Vestido Midi Negro", description: "Clásico y versátil para cualquier ocasión.", price: "€80.00", image: "images/ropa3.jpg", category: "ropa", keywords: "vestido midi negro elegante fiesta" },
+                { id: 4, name: "Jersey de Punto", description: "Suave y cálido para los días fríos.", price: "€55.00", image: "images/ropa4.jpg", category: "ropa", keywords: "jersey punto suave calido invierno" },
+                { id: 5, name: "Eau de Parfum 'Amanecer'", description: "Notas cítricas y amaderadas, muy fresco.", price: "€75.00", image: "images/perfume1.jpg", category: "perfumes", keywords: "perfume amanecer citrico amaderado fresco" },
+                { id: 6, name: "Eau de Toilette 'Noche Bohemia'", description: "Aroma intenso y misterioso con toques de vainilla.", price: "€90.00", image: "images/perfume2.jpg", category: "perfumes", keywords: "perfume noche bohemia vainilla intenso misterioso" },
+                { id: 7, name: "Set de Fragancias Minimal", description: "Tres miniaturas con aromas limpios y puros.", price: "€120.00", image: "images/perfume3.jpg", category: "perfumes", keywords: "set fragancias minimal puras limpias" },
+                { id: 8, name: "Perfume Sólido 'Zen'", description: "Discreto y reconfortante, ideal para llevar.", price: "€35.00", image: "images/perfume4.jpg", category: "perfumes", keywords: "perfume solido zen discreto reconfortante" },
+            ];
+
+            function renderProducts(filteredProducts) {
+                productListSection.innerHTML = '';
+                if (filteredProducts.length === 0) {
+                    productListSection.innerHTML = '<p style="text-align: center; width: 100%;">No se encontraron productos.</p>';
+                    return;
+                }
+                filteredProducts.forEach(product => {
+                    const productCard = document.createElement('div');
+                    productCard.classList.add('product-card');
+                    productCard.innerHTML = `
+                        <img src="${product.image}" alt="${product.name}">
+                        <div class="product-info">
+                            <h3>${product.name}</h3>
+                            <p class="description">${product.description}</p>
+                            <p class="price">${product.price}</p>
+                        </div>
+                    `;
+                    productListSection.appendChild(productCard);
+                });
+            }
+
+            function filterAndSearchProducts() {
+                const searchTerm = searchInput.value.toLowerCase();
+                const activeCategory = document.querySelector('.main-nav ul li a.active')?.dataset.category || 'all';
+
+                const filtered = products.filter(product => {
+                    const matchesCategory = (activeCategory === 'all' || product.category === activeCategory);
+                    const matchesSearch = product.name.toLowerCase().includes(searchTerm) ||
+                                          product.description.toLowerCase().includes(searchTerm) ||
+                                          product.keywords.toLowerCase().includes(searchTerm);
+                    return matchesCategory && matchesSearch;
+                });
+                renderProducts(filtered);
+            }
+
+            navLinks.forEach(link => {
+                link.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    navLinks.forEach(nav => nav.classList.remove('active'));
+                    e.target.classList.add('active');
+                    filterAndSearchProducts();
+                });
+            });
+
+            searchButton.addEventListener('click', filterAndSearchProducts);
+            searchInput.addEventListener('keyup', (e) => {
+                if (e.key === 'Enter') {
+                    filterAndSearchProducts();
+                } else if (searchInput.value === '') {
+                    filterAndSearchProducts();
+                }
+            });
+
+            navLinks[0].classList.add('active');
+            filterAndSearchProducts();
+        });
+    </script>
 </body>
 </html>
