--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             font-size: 1.8rem;
             font-weight: bold;
         }
+        
+        .logo img {
+            height: 40px; /* Tamaño del logo */
+        }
 
         /* Navegación */
         .main-nav ul {
@@ -338,7 +342,9 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <h1 class="logo">Tu Tienda</h1>
+            <h1 class="logo">
+                <img src="images/LOGOE.png" alt="Logo de tu tienda">
+            </h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#" data-category="all">Inicio</a></li>
@@ -504,3 +510,4 @@
     </script>
 </body>
 </html>
+```
