--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EREBUS</title>
+    <title>EREBUS SHOP</title>
     <style>
         /* Variables de colores neutros */
         :root {
@@ -364,7 +364,7 @@
         <div class="container">
             <div class="brand-logo">
                 <img src="images/LOGOE.png" alt="Logo de tu tienda">
-                <a href="#" class="site-name">Tu Tienda Elegante</a>
+                <a href="#" class="site-name">EREBUS</a>
             </div>
             <nav class="main-nav">
                 <ul>
