--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
             margin-right: 1rem;
         }
 
-
         /* Carrusel de Héroe */
         .hero-carousel {
             position: relative;
@@ -295,20 +294,20 @@
         /* Media Queries para Responsividad */
         @media (max-width: 768px) {
             .main-header .container {
-                flex-direction: row; /* Mantener en línea el logo y los iconos */
+                flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
                 padding: 0 1rem;
             }
 
             .main-nav {
-                display: none; /* Ocultar la navegación principal en móviles */
+                display: none;
             }
 
             .search-bar {
-                display: none; /* Ocultar la barra de búsqueda en móviles */
+                display: none;
                 position: absolute;
-                top: 70px; /* Posición debajo del header */
+                top: 70px;
                 left: 0;
                 width: 100%;
                 background: var(--color-primary);
@@ -320,7 +319,7 @@
             }
 
             .search-bar.show {
-                display: flex; /* Mostrar la barra de búsqueda si tiene la clase 'show' */
+                display: flex;
             }
             
             .search-bar input {
@@ -328,10 +327,10 @@
             }
 
             .search-toggle {
-                display: block; /* Mostrar la lupa en móviles */
+                display: block;
             }
             .brand-logo .site-name {
-                display: none; /* Ocultar el nombre de la tienda */
+                display: none;
             }
         }
         
