--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             const navLinks = document.querySelectorAll('.main-nav ul li a');
 
             const products = [
-                { id: 1, name: "PLAYERA OERIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$219.00", image: "images/PLAYERANEGRA1.PNG", category: "ropa", keywords: "PLAYERA NEGRA OVERSIZE 220G" },
+                { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$219.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA NEGRA OVERSIZE 220G" },
                 { id: 2, name: "Pantalón Chino", description: "Comodidad y estilo para el día a día.", price: "€60.00", image: "images/ropa2.jpg", category: "ropa", keywords: "pantalon chino casual comodo" },
                 { id: 3, name: "Vestido Midi Negro", description: "Clásico y versátil para cualquier ocasión.", price: "€80.00", image: "images/ropa3.jpg", category: "ropa", keywords: "vestido midi negro elegante fiesta" },
                 { id: 4, name: "Jersey de Punto", description: "Suave y cálido para los días fríos.", price: "€55.00", image: "images/ropa4.jpg", category: "ropa", keywords: "jersey punto suave calido invierno" },
