--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -475,14 +476,14 @@
             const navLinks = document.querySelectorAll('.main-nav ul li a');
 
             const products = [
-                { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$219.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA NEGRA OVERSIZE 220G" },
-                { id: 2, name: "Pantalón Chino", description: "Comodidad y estilo para el día a día.", price: "€60.00", image: "images/ropa2.jpg", category: "ropa", keywords: "pantalon chino casual comodo" },
-                { id: 3, name: "Vestido Midi Negro", description: "Clásico y versátil para cualquier ocasión.", price: "€80.00", image: "images/ropa3.jpg", category: "ropa", keywords: "vestido midi negro elegante fiesta" },
-                { id: 4, name: "Jersey de Punto", description: "Suave y cálido para los días fríos.", price: "€55.00", image: "images/ropa4.jpg", category: "ropa", keywords: "jersey punto suave calido invierno" },
-                { id: 5, name: "Eau de Parfum 'Amanecer'", description: "Notas cítricas y amaderadas, muy fresco.", price: "€75.00", image: "images/perfume1.jpg", category: "perfumes", keywords: "perfume amanecer citrico amaderado fresco" },
-                { id: 6, name: "Eau de Toilette 'Noche Bohemia'", description: "Aroma intenso y misterioso con toques de vainilla.", price: "€90.00", image: "images/perfume2.jpg", category: "perfumes", keywords: "perfume noche bohemia vainilla intenso misterioso" },
-                { id: 7, name: "Set de Fragancias Minimal", description: "Tres miniaturas con aromas limpios y puros.", price: "€120.00", image: "images/perfume3.jpg", category: "perfumes", keywords: "set fragancias minimal puras limpias" },
-                { id: 8, name: "Perfume Sólido 'Zen'", description: "Discreto y reconfortante, ideal para llevar.", price: "€35.00", image: "images/perfume4.jpg", category: "perfumes", keywords: "perfume solido zen discreto reconfortante" },
+                { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA NEGRA OVERSIZE 220G" },
+                { id: 2, name: "Pantalón Chino", description: "Comodidad y estilo para el día a día.", price: "$220.00", image: "images/ropa2.jpg", category: "ropa", keywords: "pantalon chino casual comodo" },
+                { id: 3, name: "Vestido Midi Negro", description: "Clásico y versátil para cualquier ocasión.", price: "$220.00", image: "images/ropa3.jpg", category: "ropa", keywords: "vestido midi negro elegante fiesta" },
+                { id: 4, name: "Jersey de Punto", description: "Suave y cálido para los días fríos.", price: "$220.00", image: "images/ropa4.jpg", category: "ropa", keywords: "jersey punto suave calido invierno" },
+                { id: 5, name: "Eau de Parfum 'Amanecer'", description: "Notas cítricas y amaderadas, muy fresco.", price: "$220.00", image: "images/perfume1.jpg", category: "perfumes", keywords: "perfume amanecer citrico amaderado fresco" },
+                { id: 6, name: "Eau de Toilette 'Noche Bohemia'", description: "Aroma intenso y misterioso con toques de vainilla.", price: "$220.00", image: "images/perfume2.jpg", category: "perfumes", keywords: "perfume noche bohemia vainilla intenso misterioso" },
+                { id: 7, name: "Set de Fragancias Minimal", description: "Tres miniaturas con aromas limpios y puros.", price: "$220.00", image: "images/perfume3.jpg", category: "perfumes", keywords: "set fragancias minimal puras limpias" },
+                { id: 8, name: "Perfume Sólido 'Zen'", description: "Discreto y reconfortante, ideal para llevar.", price: "$220.00", image: "images/perfume4.jpg", category: "perfumes", keywords: "perfume solido zen discreto reconfortante" },
             ];
 
             function renderProducts(filteredProducts) {
@@ -544,4 +545,4 @@
     </script>
 </body>
 </html>
-
+```
