--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Tienda Elegante</title>
+  <title>EREBUS</title>
   <style>
     /* Variables de colores neutros */
     :root {
@@ -183,8 +183,8 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://via.placeholder.com/80x50" alt="Logo">
-      <h1>Tu Tienda Elegante</h1>
+      <img src="images/LOGOE.png" alt="Logo">
+      <h1>EREBUS</h1>
     </div>
     <nav>
       <ul>
