--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EREBUS</title>
   <style>
-    /* Variables de colores neutros */
     :root {
       --color-primary: #000;
       --color-secondary: #555;
@@ -15,46 +14,35 @@
       --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: var(--font-family);
-      background-color: var(--color-background);
-      color: var(--color-text);
-      line-height: 1.6;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height: 1.6; }
 
     header {
       background: var(--color-primary);
       color: var(--color-background);
-      padding: 1rem;
       position: sticky;
       top: 0;
       z-index: 1000;
       transition: all 0.3s ease;
     }
 
-    header .logo {
+    /* Logo y título */
+    .logo-container {
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: opacity 0.3s ease, max-height 0.3s ease;
-    }
-
-    header .logo img {
-      height: 50px;
-      margin-right: 10px;
-    }
-
-    header.hidden .logo {
-      opacity: 0;
-      max-height: 0;
+      height: 70px;
+      transition: transform 0.3s ease, height 0.3s ease;
       overflow: hidden;
+    }
+
+    .logo-container img { height: 50px; margin-right: 10px; transition: height 0.3s ease; }
+    .logo-container h1 { font-size: 1.8rem; transition: font-size 0.3s ease; }
+
+    /* Clase cuando hace scroll */
+    .header-scrolled .logo-container {
+      transform: translateY(-100%);
+      height: 0;
     }
 
     nav ul {
@@ -62,7 +50,8 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 10px;
+      background: var(--color-primary);
+      transition: all 0.3s ease;
     }
 
     nav ul li a {
@@ -72,45 +61,17 @@
       transition: color 0.3s ease;
     }
 
-    nav ul li a:hover {
-      color: var(--color-accent);
-    }
+    nav ul li a:hover { color: var(--color-accent); }
 
     /* Carrusel */
-    .carousel {
-      position: relative;
-      overflow: hidden;
-      max-height: 500px;
-    }
-
-    .carousel-inner {
-      display: flex;
-      transition: transform 1s ease;
-    }
-
-    .carousel-item {
-      min-width: 100%;
-      transition: opacity 1s ease;
-      position: relative;
-    }
-
-    .carousel-item img {
-      width: 100%;
-      display: block;
-      object-fit: cover;
-    }
+    .carousel { position: relative; overflow: hidden; max-height: 500px; }
+    .carousel-inner { display: flex; transition: transform 1s ease; }
+    .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
+    .carousel-item img { width: 100%; display: block; object-fit: cover; }
 
     /* Secciones */
-    section {
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-
-    section h2 {
-      margin-bottom: 2rem;
-      font-size: 2rem;
-      color: var(--color-primary);
-    }
+    section { padding: 4rem 2rem; text-align: center; }
+    section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
 
     .products {
       display: grid;
@@ -125,72 +86,24 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .product:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
+    .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
 
-    .product img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
+    .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
+    .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
+    .product p { margin-bottom: 0.5rem; }
+    .product .price { font-weight: bold; color: var(--color-primary); }
 
-    .product h3 {
-      margin-bottom: 0.5rem;
-      color: var(--color-secondary);
-    }
+    footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
 
-    .product p {
-      margin-bottom: 0.5rem;
-    }
-
-    .product .price {
-      font-weight: bold;
-      color: var(--color-primary);
-    }
-
-    /* Footer */
-    footer {
-      background: var(--color-primary);
-      color: var(--color-background);
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-
-    /* Buscador */
-    .search-bar {
-      margin: 2rem auto;
-      max-width: 600px;
-      display: flex;
-    }
-
-    .search-bar input {
-      flex: 1;
-      padding: 0.75rem;
-      border: 1px solid var(--color-accent);
-      border-radius: 4px 0 0 4px;
-      outline: none;
-    }
-
-    .search-bar button {
-      padding: 0.75rem 1.5rem;
-      border: none;
-      background: var(--color-primary);
-      color: var(--color-background);
-      cursor: pointer;
-      border-radius: 0 4px 4px 0;
-      transition: background 0.3s ease;
-    }
-
-    .search-bar button:hover {
-      background: var(--color-secondary);
-    }
+    .search-bar { margin: 2rem auto; max-width: 600px; display: flex; }
+    .search-bar input { flex: 1; padding: 0.75rem; border: 1px solid var(--color-accent); border-radius: 4px 0 0 4px; outline: none; }
+    .search-bar button { padding: 0.75rem 1.5rem; border: none; background: var(--color-primary); color: var(--color-background); cursor: pointer; border-radius: 0 4px 4px 0; transition: background 0.3s ease; }
+    .search-bar button:hover { background: var(--color-secondary); }
   </style>
 </head>
 <body>
   <header id="mainHeader">
-    <div class="logo">
+    <div class="logo-container">
       <img src="images/LOGOE.png" alt="Logo">
       <h1>EREBUS</h1>
     </div>
@@ -309,16 +222,15 @@
       });
     }
 
-    // Render inicial
     renderProducts();
 
-    // Ocultar logo y título al hacer scroll
+    // Animación scroll
     const header = document.getElementById('mainHeader');
     window.addEventListener('scroll', () => {
       if (window.scrollY > 50) {
-        header.classList.add('hidden');
+        header.classList.add('header-scrolled');
       } else {
-        header.classList.remove('hidden');
+        header.classList.remove('header-scrolled');
       }
     });
   </script>
