--- a/index.html
+++ b/index.html
@@ -157,11 +157,10 @@
   </footer>
 
   <script>
-    // Carrusel
+    // Carrusel automático
     const carouselInner = document.querySelector('.carousel-inner');
     const carouselItems = document.querySelectorAll('.carousel-item');
     let index = 0;
-
     function showNextSlide() {
       index = (index + 1) % carouselItems.length;
       carouselInner.style.transform = `translateX(-${index * 100}%)`;
@@ -185,7 +184,6 @@
       const perfumeContainer = document.getElementById('perfumeProducts');
       ropaContainer.innerHTML = '';
       perfumeContainer.innerHTML = '';
-
       products.forEach(product => {
         const div = document.createElement('div');
         div.classList.add('product');
@@ -202,12 +200,11 @@
 
     function searchProducts() {
       const query = document.getElementById('searchInput').value.toLowerCase();
-      const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.includes(query));
+      const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.toLowerCase().includes(query));
       const ropaContainer = document.getElementById('ropaProducts');
       const perfumeContainer = document.getElementById('perfumeProducts');
       ropaContainer.innerHTML = '';
       perfumeContainer.innerHTML = '';
-
       filtered.forEach(product => {
         const div = document.createElement('div');
         div.classList.add('product');
@@ -224,14 +221,26 @@
 
     renderProducts();
 
-    // Animación scroll
+    // Scroll header
     const header = document.getElementById('mainHeader');
     window.addEventListener('scroll', () => {
-      if (window.scrollY > 50) {
-        header.classList.add('header-scrolled');
-      } else {
-        header.classList.remove('header-scrolled');
-      }
+      if (window.scrollY > 50) header.classList.add('header-scrolled');
+      else header.classList.remove('header-scrolled');
+    });
+
+    // Scroll suave navegación
+    document.querySelectorAll('nav ul li a').forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetId = this.getAttribute('href').substring(1);
+        const targetSection = document.getElementById(targetId);
+        const headerHeight = header.offsetHeight;
+        const sectionTop = targetSection.offsetTop;
+        window.scrollTo({
+          top: sectionTop - headerHeight,
+          behavior: 'smooth'
+        });
+      });
     });
   </script>
 </body>
