--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
       top: 0;
       z-index: 1000;
       transition: all 0.3s ease;
-      padding: 10px 0;
     }
 
+    /* Logo y título */
     .logo-container {
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: all 0.3s ease;
+      height: 70px;
+      transition: height 0.3s ease, opacity 0.3s ease;
+      overflow: hidden;
     }
 
     .logo-container img {
@@ -45,13 +47,14 @@
       transition: font-size 0.3s ease;
     }
 
-    /* Mini header al hacer scroll */
-    .header-scrolled .logo-container img {
-      height: 30px;
+    /* Clase cuando hace scroll */
+    .header-scrolled .logo-container {
+      height: 0;
+      opacity: 0;
     }
 
-    .header-scrolled .logo-container h1 {
-      font-size: 1rem;
+    nav {
+      transition: all 0.3s ease;
     }
 
     nav ul {
@@ -59,6 +62,7 @@
       display: flex;
       justify-content: center;
       gap: 20px;
+      background: var(--color-primary);
       transition: all 0.3s ease;
     }
 
@@ -159,6 +163,7 @@
     <p>Tel: +34 600 123 456</p>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
   </footer>
@@ -168,6 +173,7 @@
     const carouselInner = document.querySelector('.carousel-inner');
     const carouselItems = document.querySelectorAll('.carousel-item');
     let index = 0;
+
     function showNextSlide() {
       index = (index + 1) % carouselItems.length;
       carouselInner.style.transform = `translateX(-${index * 100}%)`;
@@ -183,7 +189,7 @@
       { id: 5, name: "Perfume Floral", description: "Aroma fresco y duradero.", price: "€70.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume floral aroma fresco" },
       { id: 6, name: "Perfume Amaderado", description: "Notas profundas y masculinas.", price: "€85.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume amaderado intenso" },
       { id: 7, name: "Perfume Cítrico", description: "Energía y frescura en cada gota.", price: "€65.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume cítrico fresco" },
-           { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
+      { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
     ];
 
     function renderProducts() {
@@ -230,14 +236,20 @@
 
     renderProducts();
 
-    // Animación scroll suave sin saltos
+    // Animación scroll suave y sin saltos
     const header = document.getElementById('mainHeader');
     let lastScroll = 0;
+
     window.addEventListener('scroll', () => {
       const currentScroll = window.scrollY;
-      if (currentScroll > 50 && currentScroll > lastScroll) {
+      if (currentScroll > 100 && currentScroll > lastScroll) {
+        // Scroll hacia abajo
         header.classList.add('header-scrolled');
-      } else if (currentScroll <= 50 || currentScroll < lastScroll) {
+      } else if (currentScroll < lastScroll) {
+        // Scroll hacia arriba
+        header.classList.remove('header-scrolled');
+      } else if (currentScroll <= 50) {
+        // Muy arriba
         header.classList.remove('header-scrolled');
       }
       lastScroll = currentScroll;
